[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reseff"
version = "0.1.0"
description = "科研助理个人效率命令行工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.scripts]
reseff = "reseff.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["reseff*"]
